feat: add VXB-1.1 compiler and LLM tool loop